syntax = "proto3";

package configure.api.configure.configure.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "configure.api.configure.configure.v1";
option java_outer_classname = "ServerV1";

import "validate/validate.proto";


// 查询指定模板
message GetConfigureRequest{
  uint32 serverId = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 envId = 2[(validate.rules).uint32 = {gt: 0}];
}

message GetConfigureReply{
  uint32 id = 1;
  uint32 serverId = 2;
  uint32 envId = 3;
  string content = 4;
  string description = 5;
  string version = 6;
  string format = 7;
  uint32 createdAt = 8;
}

// 对比配置
message CompareConfigureRequest {
  uint32 serverId = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 envId = 2[(validate.rules).uint32 = {gt: 0}];
}

// 对比配置详情
message Compare {
  string type = 1;
  string key = 2;
  string old = 3;
  string cur = 4;
}

message CompareConfigureReply {
  repeated Compare list = 1;
}

// 修改配置
message UpdateConfigureRequest {
  uint32 serverId = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 envId = 2[(validate.rules).uint32 = {gt: 0}];
  string description = 3[(validate.rules).string = {min_len: 1, max_len: 64}];
}
message UpdateConfigureReply{}

// 监听获取配置
message WatchConfigureRequest {
  string server = 1[(validate.rules).string = {min_len: 1}];
  string token = 2[(validate.rules).string = {min_len: 1}];
}

message WatchConfigureReply {
  string content = 1;
  string format = 2;
}
