syntax = "proto3";

package configure_configure;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "configure_configure.proto";


service Service {
  rpc GetConfigure (GetConfigureRequest) returns (GetConfigureReply) {
    option (google.api.http) = {
      get: "/configure/v1/configure"
    };
  }

  rpc UpdateConfigure (UpdateConfigureRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/configure",
      body:"*"
    };
  }

  rpc CompareConfigure (CompareConfigureRequest) returns (CompareConfigureReply) {
    option (google.api.http) = {
      post: "/configure/v1/configure/compare",
      body:"*",
    };
  }

  rpc WatchConfigure (WatchConfigureRequest) returns (stream WatchConfigureReply);

}